<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/navigate_back"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="70dp"
        android:clipToPadding="false"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <com.alxabr.market_common.ProductImageViewer
                    android:id="@+id/productImageViewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="ContentDescription" />

                <com.alxabr.market_common.ProductFavoriteView
                    android:id="@+id/productFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productTitle"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="?android:textColorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="8dp"
                tools:text="Это продукт" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productSubtitle"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Это длинное описание данного продукта"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productAvailable"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?android:textColorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Доступно для заказа 30 штук"/>

            <LinearLayout
                android:id="@+id/productRatingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/productRating"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:progressTint="@android:color/holo_orange_dark"
                    android:secondaryProgressTint="@android:color/holo_orange_dark"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/productRatingValue"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="?android:textColorHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="4.5"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/productFeedbackCount"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="?android:textColorHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="4 отзыва"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/productPrice"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="300 Р" />

                <com.alxabr.market_common.ObliqueStrikeTextView
                    android:id="@+id/productPriceWithDiscount"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="500 Р" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/productDiscount"
                    style="@style/DiscountStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="500 Р"/>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textDesc"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market_product_viewer_description"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:id="@+id/productDescLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/productBrand"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableEnd="@drawable/arrow_rigth"
                    android:gravity="start|center_vertical"
                    tools:text="Adidas"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/productDescription"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productDescHider"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?android:textColorHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/market_product_viewer_hide"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textCharacters"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market_product_viewer_characteristics"
                android:layout_marginTop="8dp"/>

            <com.alxabr.market_common.ProductInfoView
                android:id="@+id/productInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textIngredients"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market_product_viewer_ingredients"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/textCharacters"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/productIngredients"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToBasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/market_product_viewer_to_basket"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>